--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 		<imagetarget id='m-color-01' src='targets/m-color-01.png'></imagetarget>
 		<imagetarget id='Card_Doraemon' src='targets/Card_Doraemon.png'></imagetarget>
 		<imagetarget id='Card_Stitch' src='targets/Card_Stitch.png'></imagetarget>
+		<imagetarget id='Lake' src='targets/Lake.png'></imagetarget>
+		<imagetarget id='m-color-01' src='targets/m-color-01.png'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
